[package]
name = "snail_nn"
version = "0.1.0"
authors = ["Lommix"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = {version ="0.22.0", features = ["image"]}
image = "0.24.6"
